fix: compability with java 8 for sets